[tool.poetry]
name = "mqtt2http"
version = "0.1.0"
description = ""
authors = ["josueisaihs <josueisaihs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-cors-headers = "^4.3.1"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-model-utils = "^4.5.0"
python-dotenv = "^1.0.1"


[build-system]
package-mode = false
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
