[tool.poetry]
name = "mqtt2http"
version = "0.1.0"
description = ""
authors = ["josueisaihs <josueisaihs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-cors-headers = "^4.3.1"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-model-utils = "^4.5.0"
python-dotenv = "^1.0.1"
django-autoslug = "^1.9.9"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.5.0"
django-jazzmin = "^3.0.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"


[build-system]
package-mode = false
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
